--- a/group.html
+++ b/group.html
@@ -129,21 +129,21 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Shuaishuai Zu</a>
+				<a href="">Xuanzhi Feng</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Southwest University. 2024 Spring - present (project: causal time series data mining)
+				Master, Sichuan University. 2024 Fall - present (project: medical data analysis)
 			</div>
 		</td>
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Yubiao Yue</a>
+				<a href="">Wanying Tan</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Guangzhou Medical University. 2024 Spring - present (project: addressing out-of-distribution medical images)
+				Undergraduate, Shenzhen University. 2024 Fall - present (project: medical data analysis)
 			</div>
 		</td>
 	</tr>
@@ -173,16 +173,6 @@
 		<td width="85%">
 			<div class='title'>
 				HKUST-GZ. 2024 Fall - present. (project: efficient LLM fine-tuning)
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
-				<a href="">Zesheng Hong</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. 2024 Spring - 2024 Summer. (project: addressing out-of-distribution medical images)
 			</div>
 		</td>
 	</tr>
@@ -256,6 +246,36 @@
 			</div>
 		</td>
 		<td>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Shuaishuai Zu</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				Master, Southwest University. 2024 Spring (project: causal time series data mining)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Yubiao Yue</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				Master, Guangzhou Medical University. 2024 Spring (project: addressing out-of-distribution medical images)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Zesheng Hong</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2024 Spring - 2024 Summer. (project: addressing out-of-distribution medical images)
+			</div>
 		</td>
 	</tr>
 	<tr>
