add aaai25, coling25 pub

--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,44 @@
 	</tr>
 	<tr>
 		<td class='conf'>
+			 	AAAI 2025
+		</td>
+		<td>
+			<div class='title'>
+				<a name="Tang2025aaai">
+					Adapting to Non-Stationary Environments: Multi-Armed Bandit Enhanced Retrieval-Augmented Generation on Knowledge Graphs.</a>
+				<div class='author'>
+					Xiaqiang Tang, Jian Li, Nan Du, and Sihong Xie*
+				</div>
+				<div>
+					<a class='pdflink' href='paper/aaai25.bib'>[bib]</a>
+					<a class='pdflink' href='paper/aaai25.pdf'>[paper]</a>
+					<a class='pdflink' href='https://anonymous.4open.science/r/Dynamic-RAG-78D3'>[codes]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td class='conf'>
+			 	COLING 2025
+		</td>
+		<td>
+			<div class='title'>
+				<a name="Tang2025coling">
+					MBA-RAG: a Bandit Approach for Adaptive Retrieval-Augmented Generation through Question Complexity.</a>
+				<div class='author'>
+					Xiaqiang Tang, Qiang Gao, Jian Li, Nan Du, Qi Li, and Sihong Xie*
+				</div>
+				<div>
+					<a class='pdflink' href='paper/coling25.bib'>[bib]</a>
+					<a class='pdflink' href='paper/coling25.pdf'>[paper]</a>
+					<a class='pdflink' href=''>[codes]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td class='conf'>
 			 	NeurIPS 2024
 		</td>
 		<td>
