add iclr 2025 pub

--- a/publications.html
+++ b/publications.html
@@ -84,19 +84,39 @@
 	</tr>
 	<tr>
 		<td class='conf'>
-			 	AAAI 2025
+			 	ICLR 2025
 		</td>
 		<td>
 			<div class='title'>
-				<a name="Tang2025aaai">
-					Adapting to Non-Stationary Environments: Multi-Armed Bandit Enhanced Retrieval-Augmented Generation on Knowledge Graphs.</a>
+				<a name="Xu2025iclr">
+					Wasserstein-Regularized Conformal Prediction under General Distribution Shift.</a>
 				<div class='author'>
-					Xiaqiang Tang, Jian Li, Nan Du, and Sihong Xie*
+					Rui Xu, Chao Chen, Yue Sun, Parvathinathan Venkitasubramaniam, and Sihong Xie*
 				</div>
 				<div>
-					<a class='pdflink' href='paper/aaai25.bib'>[bib]</a>
-					<a class='pdflink' href='paper/aaai25.pdf'>[paper]</a>
-					<a class='pdflink' href='https://anonymous.4open.science/r/Dynamic-RAG-78D3'>[codes]</a>
+					<a class='pdflink' href='paper/iclr25xu.bib'>[bib]</a>
+					<a class='pdflink' href='paper/iclr25xu.pdf'>[paper]</a>
+					<a class='pdflink' href=''>[codes]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+	<tr>
+		<td class='conf'>
+			 	ICLR 2025
+		</td>
+		<td>
+			<div class='title'>
+				<a name="liu2025iclr">
+					Explanations of GNN on Evolving Graphs via Axiomatic Layer edges.</a>
+				<div class='author'>
+					Yazheng Liu and Sihong Xie*
+				</div>
+				<div>
+					<a class='pdflink' href='paper/iclr25liu.bib'>[bib]</a>
+					<a class='pdflink' href='paper/iclr25liu.pdf'>[paper]</a>
+					<a class='pdflink' href=''>[codes]</a>
 				</div>
 			</div>
 		</td>
