add aaai 2025 pub

--- a/publications.html
+++ b/publications.html
@@ -123,6 +123,26 @@
 	</tr>
 	<tr>
 		<td class='conf'>
+			 	AAAI 2025
+		</td>
+		<td>
+			<div class='title'>
+				<a name="Tang2025coling">
+					MBA-RAG: a Bandit Approach for Adaptive Retrieval-Augmented Generation through Question Complexity.</a>
+				<div class='author'>
+					Xiaqiang Tang, Jian Li*, Nan Du, and Sihong Xie*
+				</div>
+				<div>
+					<a class='pdflink' href='paper/aaai25.bib'>[bib]</a>
+					<a class='pdflink' href='paper/aaai25.pdf'>[paper]</a>
+					<a class='pdflink' href='https://github.com/FUTUREEEEEE/Dynamic-RAG'>[codes]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+	<tr>
+		<td class='conf'>
 			 	COLING 2025
 		</td>
 		<td>
