update aaai 2025 title

--- a/publications.html
+++ b/publications.html
@@ -127,8 +127,8 @@
 		</td>
 		<td>
 			<div class='title'>
-				<a name="Tang2025coling">
-					MBA-RAG: a Bandit Approach for Adaptive Retrieval-Augmented Generation through Question Complexity.</a>
+				<a name="Tang2025aaai">
+					Adapting to Non-Stationary Environments: Multi-Armed Bandit Enhanced Retrieval-Augmented Generation on Knowledge Graphs.</a>
 				<div class='author'>
 					Xiaqiang Tang, Jian Li*, Nan Du, and Sihong Xie*
 				</div>
