--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
+			Apr 24-28, 2025: Attend ICLR 2025 with PhD student authors in Singapore.<br>
+			Apr 17-19, 2025: Attend SigSpatial China ID meeting 2025 in Xiamen.<br>
+			Mar 20, 2025: Welcome Yue Chang joining ExRAIL as a PhD student.<br>
+			Mar 11, 2025: Give a tutorial of DeepSeek.<br>
+			Jan 23, 2025: Two papers (<a href='publications.html#liu2025iclr'>explainable AI</a>
+							and <a href='publications.html#Xu2025iclr'>conformal prediction</a>)
+							accepted to <a href='https://iclr.cc/'>ICLR 2025</a>. See you in Singapore in April!<br>
 			Dec 12, 2024: Talk on Reliable Graph Learning at Hong Kong.<br>
 			Nov 29, 2024: Talk at School of AI Jilin University on Reliable Graph Learning. <a href='slides/reliable-graph-learning-slides.pdf'>slides</a>.<br>
 			Sep 26, 2024: Three papers accepted to <a href='https://neurips.cc/'>NeurIPS 2024</a>.<br>
