--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 		<font color="#595959" font-family="Palatino">
 			Apr 24-28, 2025: Attend <a href='https://iclr.cc'>ICLR 2025</a> with PhD student authors in Singapore.<br>
 			Apr 17-19, 2025: Attend SigSpatial China ID meeting 2025 in Xiamen.<br>
+			Mar 28, 2025: AI Thrust undergraduate program promotion.<br>
 			Mar 20, 2025: Welcome Yue Chang joining ExRAIL as a PhD student.<br>
 			Mar 11, 2025: Give a tutorial of DeepSeek.<br>
 			Jan 23, 2025: Two papers (<a href='publications.html#liu2025iclr'>explainable AI</a>
