--- a/publications.html
+++ b/publications.html
@@ -116,7 +116,7 @@
 				<div>
 					<a class='pdflink' href='paper/iclr25liu.bib'>[bib]</a>
 					<a class='pdflink' href='paper/iclr25liu.pdf'>[paper]</a>
-					<a class='pdflink' href=''>[codes]</a>
+					<a class='pdflink' href='https://github.com/yazhengliu/Axiomatic-Layer-Edges'>[codes]</a>
 				</div>
 			</div>
 		</td>
