--- a/publications.html
+++ b/publications.html
@@ -296,6 +296,7 @@
 				<div>
 					<a class='pdflink' href='paper/iclr2023.bib'>[bib]</a>
 					<a class='pdflink' href='https://openreview.net/pdf?id=lRdhvzMpVYV'>[paper]</a>
+					<a class='pdflink' href='https://github.com/yazhengliu/Convex'>[codes]</a>
 				</div>
 			</div>
 		</td>
