--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
 		</div></td>
 		<td width="80%">
 			<div class='title'>
-				AAAI (2022); SDM (2024); WWW (2025)
+				AAAI (2022); SDM (2024); WWW (2025,2026)
 			</div>
 			<div class='author'>
 			</div>
@@ -70,7 +70,7 @@
 			<div class='title'>
 				ICLR (2022-2025), NeurIPS (2022-2025), ICML (2023-2025), AISTAT (2024)<br>
 				KDD (2018-2022), WWW (2024), SIGIR (2020-2024), ACL (2025)<br>
-				AAAI (2019-2022, 2025, 2026), IJCAI (2020, 2022)<br>
+				AAAI (2019-2022, 2025-2026), IJCAI (2020, 2022)<br>
 				SDM (2018-2022), ICDM (2017-2021), CIKM (2017-2022)
 			</div>
 			<div class='author'>
