add neurips25liu to publications.html

--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,26 @@
 	</tr>
 	<tr>
 		<td class='conf'>
+			 	NeurIPS 2025
+		</td>
+		<td>
+			<div class='title'>
+				<a name="neurips25liu.bib">
+					Robust Explanations of Graph Neural Networks via Graph Curvatures.</a>
+				<div class='author'>
+					Yazheng Liu, Xi Zhang, Sihong Xie*, Hui Xiong
+				</div>
+				<div>
+					<a class='pdflink' href='paper/neurips25liu.bib'>[bib]</a>
+					<a class='pdflink' href=''>[paper]</a>
+					<a class='pdflink' href=''>[codes]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+	<tr>
+	<tr>
+		<td class='conf'>
 			 	ICLR 2025
 		</td>
 		<td>
@@ -108,7 +128,7 @@
 		</td>
 		<td>
 			<div class='title'>
-				<a name="liu2025iclr">
+				<a name="iclr25liu">
 					Explanations of GNN on Evolving Graphs via Axiomatic Layer edges.</a>
 				<div class='author'>
 					Yazheng Liu and Sihong Xie*
