--- a/publications.html
+++ b/publications.html
@@ -108,7 +108,7 @@
 		</td>
 		<td>
 			<div class='title'>
-				<a name="Xu2025iclr">
+				<a name="iclr25xu">
 					Wasserstein-Regularized Conformal Prediction under General Distribution Shift.</a>
 				<div class='author'>
 					Rui Xu, Chao Chen, Yue Sun, Parvathinathan Venkitasubramaniam, and Sihong Xie*
