--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,27 @@
 			</div>
 		</td>
 	</tr>
+	
 	<tr>
+		<td class='conf'>
+			 	ACL 2025
+		</td>
+		<td>
+			<div class='title'>
+				<a name="acl25tang">
+					CogniBench: A Legal-inspired Framework and Dataset for Assessing Cognitive Faithfulness of Large Language Models</a>
+				<div class='author'>
+					Xiaqiang Tang, Jian Li*, Keyu Hu, Nan Du, Xiaolong Li, Xi Zhang, Weigao Sun, and Sihong Xie*
+				</div>
+				<div>
+					<a class='pdflink' href='paper/acl25tang.bib'>[bib]</a>
+					<a class='pdflink' href='https://aclanthology.org/2025.acl-long.1046.pdf'>[paper]</a>
+					<a class='pdflink' href='https://github.com/FUTUREEEEEE/CogniBench'>[codes]</a>
+				</div>
+			</div>
+		</td>
+	</tr>
+
 	<tr>
 		<td class='conf'>
 			 	ICLR 2025
