--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 		
 		<p>
 		<font color="#595959" font-family="Palatino">
-			Sep 18, 2025: One <a href='publications.html#neurips25liu'>paper</a> accepted to <a href='https://iclr.cc'>NeurIPS 2025</a>. Congrats to Yazheng!<br>
-			Jul 27, 2025: One <a href='publications.html#acl25tang'>paper</a> presented on <a href='https://iclr.cc'>ACL 2025</a>. Congrats to Xiaqiang!<br>
+			Sep 18, 2025: One <a href='publications.html#neurips25liu'>paper</a> accepted to <a href='https://neurips.cc'>NeurIPS 2025</a>. Congrats to Yazheng!<br>
+			Jul 27, 2025: One <a href='publications.html#acl25tang'>paper</a> presented on <a href='https://2025.aclweb.org/'>ACL 2025</a>. Congrats to Xiaqiang!<br>
 			Apr 24-28, 2025: Attend <a href='https://iclr.cc'>ICLR 2025</a> with PhD student authors in Singapore.<br>
 			Apr 17-19, 2025: Attend SigSpatial China ID meeting 2025 in Xiamen.<br>
 			Mar 28, 2025: AI Thrust undergraduate program promotion.<br>
