--- a/group.html
+++ b/group.html
@@ -43,6 +43,16 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
+				<a href="https://cy.terase.cn/HomePage/">Yue Chang</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				PhD, AI Thrust, HKUST-GZ. 2025 Fall - present (VLA; TMLR (1)) 
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
 				<a href="https://yazhengliu.github.io">Yazheng Liu</a>
 		</div></td>
 		<td width="85%">
@@ -145,21 +155,11 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Ruijie Li</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. Starting 2025 Fall (project: medical data analysis)
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
 				<a href="">Yi Wang</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				HKUST-GZ. 2024 Fall - present. (project: efficient LLM fine-tuning)
+				HKUST-GZ. 2024 Fall - present. (project: efficient LLM fine-tuning; under submissions: AAAI (1), ICLR (2))
 			</div>
 		</td>
 	</tr>
@@ -180,16 +180,6 @@
 		<td width="85%">
 			<div class='title'>
 				HKUST-GZ. 2023 Fall - present (project: multi-modal EEG data segmentation)
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
-				<a href="">Zhiran Luo</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. 2023 Fall - present (project: diffusion models for EEG data)
 			</div>
 		</td>
 	</tr>
