--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 			Mar 28, 2025: AI Thrust undergraduate program promotion.<br>
 			Mar 20, 2025: Welcome Yue Chang joining ExRAIL as a PhD student.<br>
 			Mar 11, 2025: Give a tutorial of DeepSeek.<br>
+			Feb 25, 2025: One <a href='publications.html#aaai25tang'>paper</a> presented on <a href='https://aaai.org/conference/aaai/aaai-25//'>AAAI 2025</a>. Congrats to Xiaqiang!<br>
 			Jan 23, 2025: Two papers (<a href='publications.html#iclr25liu'>explainable AI</a>
 							and <a href='publications.html#iclr25Xu'>conformal prediction</a>)
 							accepted to <a href='https://iclr.cc/'>ICLR 2025</a>. See you in Singapore in April!<br>
