--- a/publications.html
+++ b/publications.html
@@ -167,7 +167,7 @@
 		</td>
 		<td>
 			<div class='title'>
-				<a name="Tang2025aaai">
+				<a name="aaai25tang">
 					Adapting to Non-Stationary Environments: Multi-Armed Bandit Enhanced Retrieval-Augmented Generation on Knowledge Graphs.</a>
 				<div class='author'>
 					Xiaqiang Tang, Jian Li*, Nan Du, and Sihong Xie*
