--- a/teaching.html
+++ b/teaching.html
@@ -43,6 +43,16 @@
 	</tr>
 	<tr>
 		<td width="30%"><div class='conf'>
+				2025 Fall
+		</div></td>
+		<td width="70%">
+			<div class='title'>
+				<a href='teaching/2025_fall_rai/index.html'>AIAA 5047 Responsible Artificial Intelligence</a>
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="30%"><div class='conf'>
 				2024 Fall
 		</div></td>
 		<td width="70%">
