--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			Apr 24-28, 2025: Attend <a href='https://iclr.cc'>ICLR 2025</a> with PhD student authors in Singapore.<br>
 			Apr 17-19, 2025: Attend SigSpatial China ID meeting 2025 in Xiamen.<br>
 			Mar 28, 2025: AI Thrust undergraduate program promotion.<br>
-			Mar 20, 2025: Welcome Yue Chang joining ExRAIL as a PhD student.<br>
+			Mar 20, 2025: Welcome <a href='https://cy.terase.cn/HomePage'>Yue Chang</a> joining ExRAIL as a PhD student.<br>
 			Mar 11, 2025: Give a tutorial of DeepSeek.<br>
 			Feb 25, 2025: One <a href='publications.html#aaai25tang'>paper</a> presented on <a href='https://aaai.org/conference/aaai/aaai-25//'>AAAI 2025</a>. Congrats to Xiaqiang!<br>
 			Jan 23, 2025: Two papers (<a href='publications.html#iclr25liu'>explainable AI</a>
