--- a/group.html
+++ b/group.html
@@ -126,11 +126,31 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
-				<a href="">Xuanzhi Feng</a>
+				<a href="">Yi Chen</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Sichuan University. 2024 Fall - present (project: medical data analysis)
+				Bachelor, Jilin University. 2025 Summer - present (project: trustworthy embodied AI)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Chaoxiong Liang</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				Bachelor, University of Illinois at Urbana-Champaign. 2025 Fall - present (project: knowledge-intensive LLM)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Dazhi Huang</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				Bachelor, Guangdong University of Finance. 2025 Summer - present (project: topological data analysis applied to medical images)
 			</div>
 		</td>
 	</tr>
@@ -140,7 +160,7 @@
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Undergraduate, Shenzhen University. 2024 Fall - present (project: medical data analysis)
+				Undergraduate, Shenzhen University. 2024 Fall - present (project: small object detection on medical images)
 			</div>
 		</td>
 	</tr>
