--- a/group.html
+++ b/group.html
@@ -219,7 +219,17 @@
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				HKUST-GZ. 2023 Fall - present (project: causal models for medicine)
+				HKUST-GZ. 2023 Fall - present (project: causal models for medicine; CCF BigData (1))
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Xiangrong Liao</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				HKUST-GZ. 2023 Fall - 25 Spring (project: RL for EV station planning)
 			</div>
 		</td>
 	</tr>
