--- a/group.html
+++ b/group.html
@@ -182,58 +182,7 @@
 				HKUST-GZ. 2024 Fall - present. (project: efficient LLM fine-tuning; under submissions: AAAI (1), ICLR (2))
 			</div>
 		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
-				<a href="">Wenqi Qiu</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. 2023 Fall - present (project: 3D reconstruction from brain data)
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
-				<a href="">Hui Wu</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. 2023 Fall - present (project: multi-modal EEG data segmentation)
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
-				<a href="">Tianchuang Bai</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. 2023 Fall - present (project: responsible LLM)
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
-				<a href="">Xinyuan Chen</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. 2023 Fall - present (project: causal models for medicine; CCF BigData (1))
-			</div>
-		</td>
-	</tr>
-	<tr>
-		<td width="15%"><div class='conf'>
-				<a href="">Xiangrong Liao</a>
-		</div></td>
-		<td width="85%">
-			<div class='title'>
-				HKUST-GZ. 2023 Fall - 25 Spring (project: RL for EV station planning)
-			</div>
-		</td>
-	</tr>
-	
+	</tr>	
 	<!--
 	<tr>
 		<td>
@@ -257,11 +206,61 @@
 	</tr>
 	<tr>
 		<td width="15%"><div class='conf'>
+				<a href="">Wenqi Qiu</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				MPhil, HKUST-GZ. 2023 Fall - present (project: 3D reconstruction from brain data)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Hui Wu</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				MPhil, HKUST-GZ. 2023 Fall - present (project: multi-modal EEG data segmentation)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Tianchuang Bai</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				MPhil, HKUST-GZ. 2023 Fall - present (project: responsible LLM)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Xinyuan Chen</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				MPhil, HKUST-GZ. 2023 Fall - present (project: causal models for medicine; CCF BigData (1))
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
+				<a href="">Xiangrong Liao</a>
+		</div></td>
+		<td width="85%">
+			<div class='title'>
+				MPhil, HKUST-GZ. 2023 Fall - 25 Spring (project: RL for EV station planning)
+			</div>
+		</td>
+	</tr>
+	<tr>
+		<td width="15%"><div class='conf'>
 				<a href="">Shuaishuai Zu</a>
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Southwest University. 2024 Spring (project: causal time series data mining)
+				RA, Southwest University. 2024 Spring (project: causal time series data mining)
 			</div>
 		</td>
 	</tr>
@@ -271,7 +270,7 @@
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				Master, Guangzhou Medical University. 2024 Spring (project: addressing out-of-distribution medical images)
+				RA, Guangzhou Medical University. 2024 Spring (project: addressing out-of-distribution medical images)
 			</div>
 		</td>
 	</tr>
@@ -281,7 +280,7 @@
 		</div></td>
 		<td width="85%">
 			<div class='title'>
-				HKUST-GZ. 2024 Spring - 2024 Summer. (project: addressing out-of-distribution medical images)
+				RA, HKUST-GZ. 2024 Spring - 2024 Summer. (project: out-of-distribution medical images)
 			</div>
 		</td>
 	</tr>
